# photobooth-docs

./: .htaccess  .markdownlint.json  404.html  README.md  _config.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: publish.yml
basicconfig/: index.html
contribute/: index.html
docs/: .htaccess  CNAME  contribute.md  download.md  extras.md  faq.md  features.md  how-to-guides.md  index.md  installation.md  other.md  photobox3dprint.md  projects.md  reference.md  screenshots.md  setup.md  tutorials.md  update.md
docs/extras/: buzzer.md  display.md  gpio.md  index.md  onscreenkeyboard.md  printerexample.md  printing.md  shareservice-landing.md  shareservice.md  sync.md  ups.md  wifi.md  wled.md
docs/help/: faq.md  index.md  troubleshooting.md  tutorials.md
docs/reference/: api.md  bulktransferfiles.md  configuration.md  customizetheme.md  directories.md  explanation.md  foldersandurls.md  index.md  openapi.json  photoboothprojectintegration.md  plugins.md
docs/setup/: admincenter.md  camera_setup.md  gpio.md  index.md  installation.md  (+6 more)
download/: index.html
explanation/: index.html
extras/: index.html
faq/: index.html
features/: index.html
help/: index.html
how-to-guides/: index.html
installation/: index.html
other/: index.html
overrides/: main.html
photobox3dprint/: index.html
projects/: index.html
reference/: index.html  openapi.json
screenshots/: index.html
search/: search_index.json
setup/: index.html
support/: index.html
tutorials/: index.html
update/: index.html
(+133 files in other folders)
